--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,13 @@
 			<artifactId>jackson-annotations</artifactId>
 			<version>2.9.4</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+			<version>2.0.0.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
