--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
 			<version>1.1.3.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.3.176</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
