--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,14 @@
 kafka.topic.name=user_topic
 kafka.server.address=localhost:9092
+
+
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+
+
+# Datasource
+spring.datasource.url=jdbc:h2:file:~/test
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
